--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start_activity"
+        android:text="@string/start_2activity"
         android:id="@+id/start_activity"
         android:onClick="btnStartActivityClicked"/>
 
