dodati string fajlovi na SR i EN, dodate ikone

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:text="@string/open_browser"
         android:id="@+id/open_browser"
+        android:drawableLeft="@drawable/ic_browser"
         android:onClick="btnOpenBrowserClicked"/>
     
 </LinearLayout>
