--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:text="@string/open_camera"
         android:id="@+id/open_camera"
+        android:drawableLeft="@drawable/ic_camera"
         android:onClick="btnOpenCameraClicked"/>
 
 
