--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -5,7 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Declares a button that starts 2nd activity -->
+    <ImageView
+        android:id="@+id/iv_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_ingredients"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_calories"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+
+
+    <!-- Declares a button that starts 2nd activity
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,14 +51,15 @@
         android:id="@+id/start_activity"
         android:onClick="btnStartThirdActivityClicked"/>
 
-    <!-- Declares a button that opens the camera -->
+     Declares a button that opens the camera
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/open_camera"
         android:id="@+id/open_camera"
         android:drawableLeft="@drawable/ic_camera"
-        android:onClick="btnOpenCameraClicked"/>
+        android:onClick="btnOpenCameraClicked"/>-->
+
 
 
 </LinearLayout>
