--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,5 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:drawableLeft="@drawable/ic_action_search"
+    android:drawableStart="@drawable/ic_action_search"
     android:padding="10dp"
     android:textSize="16sp" />
