--- a/app/src/main/res/layout/list_item2.xml
+++ b/app/src/main/res/layout/list_item2.xml
@@ -4,5 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:drawableLeft="@drawable/ic_action_description"
+    android:drawableStart="@drawable/ic_action_description"
     android:padding="10dp"
     android:textSize="16sp" />
