--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,8 +18,8 @@
 
     <ImageView
         android:id="@+id/iv_image"
-        android:layout_width="250dp"
-        android:layout_height="150dp"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:contentDescription="@string/cd_image"
         android:layout_centerHorizontal="true"/>
 
@@ -19,7 +30,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/iv_image"
-        android:textSize="16sp"/>
+        android:textSize="20sp"
+        android:textColor="@color/primary_text"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tv_description"
@@ -28,7 +41,9 @@
         android:layout_below="@id/tv_name"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textSize="16sp"/>
+        android:textSize="14sp"
+        android:textColor="@color/secondary_text"
+        android:textStyle="italic"/>
 
     <Spinner
         android:id="@+id/sp_category"
@@ -37,7 +52,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@id/tv_description"
-        android:textSize="16sp"/>
+        android:textSize="14sp"
+        android:textColor="@color/secondary_text"/>
 
     <TextView
         android:id="@+id/tv_calories"
@@ -46,7 +62,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/sp_category"
-        android:textSize="16sp"/>
+        android:textSize="14sp"
+        android:textColor="@color/secondary_text"/>
 
     <TextView
         android:id="@+id/tv_price"
@@ -55,7 +72,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/tv_calories"
-        android:textSize="16sp"/>
+        android:textSize="14sp"
+        android:textColor="@color/secondary_text"/>
 
     <ListView
         android:id="@+id/ingredients_list"
@@ -64,3 +82,12 @@
         android:layout_below="@id/tv_price"/>
 
 </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_buy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_stat_buy"/>
+
+</android.support.design.widget.CoordinatorLayout>
